# vibe-hack-and-slash

./: .gitignore  CLAUDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
data/: class-skills.json  items.json  items.json.bak  monsters.json  prefixes.json  skills.json  starter-equipment.json  suffixes.json  weapon-skills.json  weapon-unique-skills.json
data/schemas/: item-schema.ts  skill-schema.ts  starter-equipment-schema.ts
docs/lib/: ink-ui-usages.md  ink-usages.md  ink-usages.test.tsx
moonbit/: README.md  build.sh  moon.mod.json
moonbit/src/: damage.mbt  js_bindings.mbt  loot.mbt  main.mbt  moon.pkg.json  types.mbt
poc/: 01-ink.tsx  02-button.tsx  02-ink-no-input.tsx  03-ink-ui-examples.tsx
reports/: evaluation-analysis-2024-12-22.md  test-evaluation.txt
rust/: Cargo.toml
rust/src/: lib.rs  types.rs
schemas/: class-skills.schema.json  items.schema.json  monsters.schema.json  skills.schema.json  starter-equipment.schema.json
scripts/: README.md  check-schema.ts  evaluate-battle.ts  generate-schemas.ts  render-ui.ts
scripts/sample-states/: battle-view-fixed.json  battle-view.json  battle-with-logs.json  equipment-empty.json  equipment-view.json
src/: index.tsx  simulate-clean.ts  snapshot-game.ts
src/app/: Game.tsx  evaluate.ts  index.tsx  simulate.ts  types.ts
src/browser/: BrowserGame.tsx  browser-app.tsx  browser-entry.tsx  browser-game.tsx  data-loader.ts  direct-game.tsx  index.html  node-polyfills.ts  simple-ink-test.tsx  simple.html  string-renderer.ts  terminal-renderer.tsx  (+1 more)
(+49 files in other folders)
