[package]
name = "hacknslash"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
pretty_assertions = "1.4"

[[bench]]
name = "damage_calc"
harness = false